--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
   "type": "module",
   "workspaces": [
     "src/rwa_frontend"
-  ]
+  ],
+  "dependencies": {
+    "@connect2ic/core": "^0.2.0-beta.20",
+    "@connect2ic/react": "^0.2.0-beta.20",
+    "@dfinity/auth-client": "^2.4.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.3"
+  }
 }
